...
                android:maxLines="1"
                android:text="@string/text_detail_toolbar_dummytitle"
                android:textColor="@color/white"
                android:textSize="@dimen/text_all_toolbar"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_detail_favorite"
                app:layout_constraintStart_toEndOf="@id/img_detail_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_detail_favorite"
                android:layout_width="wrap_content"
...
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_detail_poster"
                        android:layout_width="@dimen/width_all_zero"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_broken_image_black"
                        app:layout_constraintBottom_toBottomOf="parent"
...
                        app:layout_constraintHorizontal_weight="4"
                        app:layout_constraintStart_toEndOf="@id/img_detail_poster"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0">

                        <TextView
                            android:id="@+id/textview_detail_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/textview_detail_score_subtitle"
                            app:layout_constraintEnd_toEndOf="parent"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_all_small"
                            android:text="@string/all_score"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/textview_detail_score"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textview_detail_title" />

                        <TextView
                            android:id="@+id/textview_detail_score"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_all_small"
                            android:text="@string/all_genres"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/textview_detail_genres"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textview_detail_score" />

                        <TextView
                            android:id="@+id/textview_detail_genres"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_all_small"
                            android:text="@string/all_release"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/textview_detail_release"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textview_detail_genres" />

                        <TextView
                            android:id="@+id/textview_detail_release"
...
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraint_detail_poster" />

                <TextView
                    android:id="@+id/textview_detail_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dimgray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textview_detail_cast_subtitle" />
...
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textview_detail_cast" />

                <TextView
                    android:id="@+id/textview_detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:textColor="@color/dimgray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
