<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_moviedb"
        android:icon="@drawable/ic_movie"
        android:title="@string/all_moviedb" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/selector_favorite"
        android:title="@string/all_favorite" />
</menu>