<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dicoding.moviecatalogue.ui.catalogues.home.moviedb.MovieDBFragment">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_moviedb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_all_tiny"
        app:layout_constraintBottom_toTopOf="@id/viewpager_moviedb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/midnightblue"
        app:tabTextColor="@color/midnightblue" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_moviedb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_all_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_moviedb" />

</androidx.constraintlayout.widget.ConstraintLayout>